Change the savings and deposits responses to string
Deposit Product audit conversion

Deposit Account Audit Conversion